--- a/Kirsche/index.html
+++ b/Kirsche/index.html
@@ -190,7 +190,7 @@
 			display: flex;
 			align-items: flex-start;
 			justify-content: space-between; /* Ensures items are evenly spaced */
-            animation: scroll 22s linear infinite; 
+            animation: scroll linear infinite; 
         }
 
         .carousel-item {
