--- a/Pippa/index.html
+++ b/Pippa/index.html
@@ -190,7 +190,7 @@
 			display: flex;
 			align-items: flex-start;
 			justify-content: space-between; /* Ensures items are evenly spaced */
-            animation: scroll 10s linear infinite; 
+            animation: scroll 12s linear infinite; 
         }
 
         .carousel-item {
@@ -369,8 +369,16 @@
 				
 			    const totalItems = carouselTrack.children.length;
 				if (totalItems < 13) {
+					const items = carouselTrack.querySelectorAll('.carousel-item');
+					const baseSpeed = 2; // seconds per item, adjust as needed
+					const duration = baseSpeed * items.length;
+					carouselTrack.style.animationDuration = `${duration}s`;
 					carouselTrack.style.animationPlayState = 'paused';
 				} else {
+					const items = carouselTrack.querySelectorAll('.carousel-item');
+					const baseSpeed = 2; // seconds per item, adjust as needed
+					const duration = baseSpeed * items.length;
+					carouselTrack.style.animationDuration = `${duration}s`;
 					carouselTrack.style.animationPlayState = 'running';
 				}
 
